frame/support/test/tests/pallet_ui/hold_reason_not_pub.stderr
error: Invalid pallet::composite_enum, `HoldReason` must be public
  --> tests/pallet_ui/hold_reason_not_pub.rs:10:5
   |
10 |     enum HoldReason {}
   |     ^^^^
